// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CircleBadge > respects the inline prop 1`] = `
<div
  class="sc-hzhJZQ bXgcAI"
/>
`;

exports[`CircleBadge > respects the variant prop 1`] = `
<div
  class="sc-hzhJZQ fDGwQg"
/>
`;

exports[`CircleBadge > uses the size prop to override the variant prop 1`] = `
<div
  class="sc-hzhJZQ jIuIWo"
  size="20"
/>
`;
